--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "build": "electron-packager . omniview --platform=win32 --arch=x64  --overwrite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
