updated post disaster module

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ opencv-python
 scikit-learn
 numpy
 pillow
+
+pip install flask flask-cors requests google-generativeai python-dotenv matplotlib seaborn pandas numpy pillow
